# rtk-claude-safe

./: .gitignore  README.md  SAFE_RTK_COMMANDS.md  TEST_RESULTS.md  pyproject.toml
rtk_claude_safe/: __main__.py  allowlist.py  claude_hook.py  claude_settings.py  cli.py  codex_hook.py  codex_settings.py  hook_command.py  hooks.py  installer.py  managed_hooks.py  rtk_runtime.py  settings.py
tests/: test_allowlist.py  test_claude_hook.py  test_claude_settings.py  test_cli.py  test_codex_hook.py  test_codex_settings.py  test_docs.py  test_hook_command.py  test_installer.py  test_rtk_runtime.py
